--- a/index.html
+++ b/index.html
@@ -14,59 +14,59 @@
     <main class="content">
       <section class="profile">
         <div class="profile__info">
-          <img class="profile__avatar" src="images/profile-kusto.jpg" alt="Жак-Ив Кусто">
+          <img class="profile__avatar" src="images/profile-kusto.jpg" alt="Аватар пользователя">
           <div class="profile__form">
             <div class="profile__row">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
-              <button class="profile__edit-button"></button>
+              <button type="button" class="profile__edit-button"></button>
             </div>
             <p class="profile__position">Исследователь океана</p>
           </div>
         </div>
-        <button class="profile__add-button"></button>
+        <button type="button" class="profile__add-button"></button>
       </section>
       <section class="elements">
         <ul class="elements__list">
           <li class="elements__item">
             <img class="elements__image" src="images/elements-altai.jpg" alt="Алтай">
             <div class="elements__rectangle">
-              <p class="elements__text">Алтай</p>
-              <button class="elements__like"></button>
+              <h2 class="elements__text">Алтай</h2>
+              <button type="button" class="elements__like"></button>
             </div>
           </li>
           <li class="elements__item">
             <img class="elements__image" src="images/elements-baikal.jpg" alt="Байкал">
             <div class="elements__rectangle">
-              <p class="elements__text">Озеро Байкал</p>
-              <button class="elements__like"></button>
+              <h2 class="elements__text">Озеро Байкал</h2>
+              <button type="button" class="elements__like"></button>
             </div>
           </li>
           <li class="elements__item">
             <img class="elements__image" src="images/elements-elbrus.jpg" alt="Эльбрус">
             <div class="elements__rectangle">
-              <p class="elements__text">Гора Эльбрус</p>
-              <button class="elements__like"></button>
+              <h2 class="elements__text">Гора Эльбрус</h2>
+              <button type="button" class="elements__like"></button>
             </div>
           </li>
           <li class="elements__item">
             <img class="elements__image" src="images/elements-stpetersburg.jpg" alt="Санкт-Петербург">
             <div class="elements__rectangle">
-              <p class="elements__text">Санкт-Петербург</p>
-              <button class="elements__like"></button>
+              <h2 class="elements__text">Санкт-Петербург</h2>
+              <button type="button" class="elements__like"></button>
             </div>
           </li>
           <li class="elements__item">
             <img class="elements__image" src="images/elements-moscow.jpg" alt="Москва">
             <div class="elements__rectangle">
-              <p class="elements__text">Москва</p>
-              <button class="elements__like"></button>
+              <h2 class="elements__text">Москва</h2>
+              <button type="button" class="elements__like"></button>
             </div>
           </li>
           <li class="elements__item">
             <img class="elements__image" src="images/elements-vladivostok.jpg" alt="Владивосток">
             <div class="elements__rectangle">
-              <p class="elements__text">Владивосток</p>
-              <button class="elements__like"></button>
+              <h2 class="elements__text">Владивосток</h2>
+              <button type="button" class="elements__like"></button>
             </div>
           </li>
         </ul>
@@ -79,14 +79,14 @@
 <div class="popup">
   <div class="popup__container">
     <h2 class="popup__title">Редактировать профиль</h2>
-    <button class="popup__close-button"></button>
-    <form action="#" class="popup__form">
-      <input type="text" class="popup__input popup__input_type_name" value="Жак-Ив Кусто">
-      <input type="text" class="popup__input popup__input_type_position" value="Исследователь океана">
+    <button type="button" class="popup__close-button"></button>
+    <form action="#" class="popup__form" name="profile">
+      <input type="text" class="popup__input popup__input_type_name" name="name" value="Жак-Ив Кусто" required>
+      <input type="text" class="popup__input popup__input_type_position" name="position" value="Исследователь океана" required>
       <button type="submit" class="popup__save-button">Сохранить</button>
     </form>
   </div>
 </div>
-<script src="index.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
