--- a/index.html
+++ b/index.html
@@ -26,57 +26,14 @@
         <button type="button" aria-label="Добавить" class="profile__add-button"></button>
       </section>
       <section class="elements">
-        <ul class="elements__list">
-          <li class="elements__item">
-            <img class="elements__image" src="images/elements-altai.jpg" alt="Алтай">
-            <div class="elements__rectangle">
-              <h2 class="elements__text">Алтай</h2>
-              <button type="button" aria-label="Нравится" class="elements__like"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img class="elements__image" src="images/elements-baikal.jpg" alt="Байкал">
-            <div class="elements__rectangle">
-              <h2 class="elements__text">Озеро Байкал</h2>
-              <button type="button" aria-label="Нравится" class="elements__like"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img class="elements__image" src="images/elements-elbrus.jpg" alt="Эльбрус">
-            <div class="elements__rectangle">
-              <h2 class="elements__text">Гора Эльбрус</h2>
-              <button type="button" aria-label="Нравится" class="elements__like"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img class="elements__image" src="images/elements-stpetersburg.jpg" alt="Санкт-Петербург">
-            <div class="elements__rectangle">
-              <h2 class="elements__text">Санкт-Петербург</h2>
-              <button type="button" aria-label="Нравится" class="elements__like"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img class="elements__image" src="images/elements-moscow.jpg" alt="Москва">
-            <div class="elements__rectangle">
-              <h2 class="elements__text">Москва</h2>
-              <button type="button" aria-label="Нравится" class="elements__like"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img class="elements__image" src="images/elements-vladivostok.jpg" alt="Владивосток">
-            <div class="elements__rectangle">
-              <h2 class="elements__text">Владивосток</h2>
-              <button type="button" aria-label="Нравится" class="elements__like"></button>
-            </div>
-          </li>
-        </ul>
+        <ul class="elements__list"></ul>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
-<div class="popup">
+<div class="popup popup__type_edit-profile">
   <div class="popup__container">
     <h2 class="popup__title">Редактировать профиль</h2>
     <button type="button" aria-label="Закрыть" class="popup__close-button"></button>
@@ -87,6 +44,36 @@
     </form>
   </div>
 </div>
+<div class="popup popup__type_add-card">
+  <div class="popup__container">
+    <h2 class="popup__title">Новое место</h2>
+    <button type="button" aria-label="Закрыть" class="popup__close-button"></button>
+    <form action="#" class="popup__form" name="places">
+      <input type="text" class="popup__input popup__input_type_place" name="place" value="" placeholder="Название" required>
+      <input type="text" class="popup__input popup__input_type_link" name="link" value="" placeholder="Ссылка на картинку" required>
+      <button type="submit" class="popup__save-button">Создать</button>
+    </form>
+  </div>
+</div>
+<div class="popup popup__type_image">
+  <div class="popup__container popup__container_image">
+    <figure class="popup__figure">
+      <button type="button" aria-label="Закрыть" class="popup__close-button"></button>
+      <img class="popup__image" src="" alt="">
+      <figcaption class="popup__text"></figcaption>
+    </figure>
+  </div>
+</div>
+<template class="template-card">
+  <li class="elements__item">
+    <img class="elements__image" src="" alt="">
+    <button type="button" aria-label="Удалить" class="elements__delete"></button>
+    <div class="elements__rectangle">
+      <h2 class="elements__text"></h2>
+      <button type="button" aria-label="Нравится" class="elements__like"></button>
+    </div>
+  </li>
+</template>
 <script src="js/index.js"></script>
 </body>
 </html>
