Исправить ошибки (работа 5)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
-<div class="popup popup__type_edit-profile">
+<div class="popup popup_type_edit-profile">
   <div class="popup__container">
     <h2 class="popup__title">Редактировать профиль</h2>
     <button type="button" aria-label="Закрыть" class="popup__close-button"></button>
@@ -44,7 +44,7 @@
     </form>
   </div>
 </div>
-<div class="popup popup__type_add-card">
+<div class="popup popup_type_add-card">
   <div class="popup__container">
     <h2 class="popup__title">Новое место</h2>
     <button type="button" aria-label="Закрыть" class="popup__close-button"></button>
@@ -55,7 +55,7 @@
     </form>
   </div>
 </div>
-<div class="popup popup__type_image">
+<div class="popup popup_type_image">
   <div class="popup__container popup__container_image">
     <figure class="popup__figure">
       <button type="button" aria-label="Закрыть" class="popup__close-button"></button>
@@ -65,12 +65,12 @@
   </div>
 </div>
 <template class="template-card">
-  <li class="elements__item">
-    <img class="elements__image" src="" alt="">
-    <button type="button" aria-label="Удалить" class="elements__delete"></button>
-    <div class="elements__rectangle">
-      <h2 class="elements__text"></h2>
-      <button type="button" aria-label="Нравится" class="elements__like"></button>
+  <li class="cards">
+    <img class="cards__image" src="" alt="">
+    <button type="button" aria-label="Удалить" class="cards__delete"></button>
+    <div class="cards__rectangle">
+      <h2 class="cards__text"></h2>
+      <button type="button" aria-label="Нравится" class="cards__like"></button>
     </div>
   </li>
 </template>
