Исправить ошибки (работа 6)

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   </li>
 </template>
 <script src="js/index.js"></script>
+<script src="js/initial-cards.js"></script>
 <script src="js/validate.js"></script>
 </body>
 </html>
