--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     </div>
   </li>
 </template>
+<script src="js/utils.js"></script>
 <script src="js/index.js"></script>
 <script src="js/initial-cards.js"></script>
 <script src="js/validate.js"></script>
