Исправить ошибки (работа 7)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </figure>
   </div>
 </div>
-<template class="template-card">
+<template class="template-card" id='tepmlate-card'>
   <li class="cards">
     <img class="cards__image" src="" alt="">
     <button type="button" aria-label="Удалить" class="cards__delete"></button>
